# simple-translate

./: README.md  pyproject.toml  server_start.py
simple_translate/: main.py  translate.py
simple_translate_front/: package-lock.json  package.json
simple_translate_front/public/: index.html
simple_translate_front/src/: App.css  App.js
simple_translate_front/src/components/: header.js  translator.js
